Revert "Fix: Set abs-img-1 bottom to 0px on mobile to prevent overflow"
This reverts commit 5e8988dc82cd00595f89074de332ebac1f2ae032.

--- a/assets/css/combined.css
+++ b/assets/css/combined.css
@@ -3338,7 +3338,7 @@ textarea.input-field {
     max-width: 100%;
     position: relative;
     padding-top: 30px;
-    padding-bottom: 0px;
+    padding-bottom: 60px;
   }
 
   .about-banner > .w-100 {
@@ -3364,7 +3364,7 @@ textarea.input-field {
   .about .abs-img-1 {
     width: 100px;
     max-width: 100px;
-    bottom: 0px;
+    bottom: -60px;
     left: 0;
     padding-block: 20px;
   }
